syntax = "proto3";

package ua.gov.diia.types.file;

option java_multiple_files = true;
option java_package = "ua.gov.diia.types.file";

message DownloadResponse {
  optional FileResponse document = 1;
  optional int32 processCode = 2;

  message FileResponse {
    string file = 1;
    string name = 2;
    string mimeType = 3;
  }
}
